three.js orbitControls

--- a/web/src/coding/works/page32.ejs
+++ b/web/src/coding/works/page32.ejs
@@ -13,9 +13,7 @@
 <div id="c-page">
   <main class="c-page">
 
-
     <page name="work32" tab="3">
-
 
       <template slot="mainCont">
         <div class="canvas-parent" id="parent">
@@ -23,12 +21,9 @@
         </div>
       </template>
 
-
-
       <template slot="html">
         <!-- ソースとしてhtmlを記述 -->
       </template>
-
 
       <template slot="css">
         .canvas-parent {
@@ -38,8 +33,14 @@
         }
       </template>
 
-
       <template slot="js">
+        // three.jsをnode moduleから読み込み
+        import * as THREE from 'three';
+        // orbitControls.jsをnode moduleから読み込み
+        import {
+        OrbitControls
+        } from "three/examples/jsm/controls/OrbitControls";
+
         /**
         * createdのタイミングでinit()関数実行
         */
@@ -55,16 +56,17 @@
         let cH = parent.clientHeight;
 
         // グローバルでの変数定義
-        var renderer, scene, camera, controls, directionalLight, geometry, material, sphere, loader, texture;
+        var renderer, scene, camera, container, controls, directionalLight,
+        ambientLight, geometryList, material, mesh;
 
         // OrbitControls用domElement変数
         let domElement = document.getElementById("myCanvas");
 
         // カメラ位置
         var cameraPos = {
-        x: 1,
-        y: 1,
-        z: 500
+        x: 0,
+        y: 800,
+        z: 800
         }
 
         // 光源位置
@@ -73,6 +75,9 @@
         y: .7,
         z: .6
         }
+
+        // オブジェクトの配色
+        var colorArray = ["turquoise", "lime", "yellow", "blue", "pink", "purple", "red"]
 
         // ----------------------------------------------------------------------
 
@@ -87,39 +92,72 @@
         });
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(cW, cH);
-        renderer.setClearColor("rgb(0, 0, 30)", 1);
+        renderer.setClearColor("grey", .2);
 
         // シーンを定義
         scene = new THREE.Scene();
 
-        // シーンにカメラを定義
-        camera = new THREE.PerspectiveCamera(45, cW / cH, 1, 30000);
-        // mousedragで、カメラ位置変更
-        controls = new OrbitControls(camera, domElement);
+        // カメラを定義
+        camera = new THREE.PerspectiveCamera(
+        45,
+        cW / cH,
+        1,
+        10000
+        );
+        camera.position.set(cameraPos.x, cameraPos.y, cameraPos.z);
+        camera.lookAt(new THREE.Vector3(0, 0, 0));
         camera.position.set(cameraPos.x, cameraPos.y, cameraPos.z);
         scene.add(camera);
 
-        // シーンに光源(シーンを照らす光)を定義
-        directionalLight = new THREE.DirectionalLight('#fff');
+        // mousedragで、カメラ位置変更
+        controls = new OrbitControls(camera, domElement);
+
+        // 平行光源を定義
+        directionalLight = new THREE.DirectionalLight(0xffffff);
         directionalLight.position.set(lightPos.x, lightPos.y, lightPos.z);
-        directionalLight.intensity = 1.5;
         scene.add(directionalLight);
+        // 環境光源を定義
+        ambientLight = new THREE.AmbientLight(0x999999);
+        ambientLight.intensity = .5;
+        scene.add(ambientLight);
 
-        // オブジェクトの形式を定義
-        geometry = new THREE.SphereGeometry(100, 100, 100);
+        // コンテナー(7つのジオメトリを体系化したオブジェクト)を定義
+        container = new THREE.Object3D();
+        scene.add(container);
 
-        // テクスチャ用の画像を読み込む
-        loader = new THREE.TextureLoader();
-        texture = loader.load('../../../assets/img/coding/page/kv/planet/earth.jpg');
+        // ジオメトリを定義
+        geometryList = [
+        new THREE.SphereGeometry(40, 40, 40), // 球体
+        new THREE.BoxGeometry(75, 75, 75), // 直方体
+        new THREE.PlaneGeometry(75, 75), // 平面
+        new THREE.TetrahedronGeometry(75, 0), // カプセル形状
+        new THREE.ConeGeometry(75, 75, 24), // 三角錐
+        new THREE.CylinderGeometry(75, 75, 75, 24), // 円柱
+        new THREE.TorusGeometry(75, 20, 12, 75) // ドーナツ形状
+        ];
 
-        // オブジェクトの質感を定義
+        // geometryList配列をもとにオブジェクトを定義していく
+        geometryList.map((geometry, i) =&gt; {
+
+        // マテリアルを定義
         material = new THREE.MeshStandardMaterial({
-        map: texture
+        color: colorArray[i],
+        side: THREE.DoubleSide
         });
 
-        // 定義した形式とスタイルをもとに、オブジェクトを生成
-        sphere = new THREE.Mesh(geometry, material);
-        scene.add(sphere);
+        // オブジェクトを定義
+        mesh = new THREE.Mesh(geometry, material);
+
+        // オブジェクトを円周上に配置
+        mesh.position.x =
+        300 * Math.sin((i / geometryList.length) * Math.PI * 2);
+        mesh.position.z =
+        300 * Math.cos((i / geometryList.length) * Math.PI * 2);
+
+        // container空間にオブジェクトを定義
+        container.add(mesh);
+
+        });
 
         // 常に連続的に描画するため、animate()関数実行
         animate();
@@ -132,25 +170,12 @@
         * 常に連続的に描画するためのアニメーション関数
         */
         function animate() {
-        // 球体の自転
-        rotation()
         // mousedragでカメラ位置変更
         controls.update();
         // rendererインスタンスにシーンとカメラを渡し、レンダリング
         renderer.render(scene, camera);
         // animate()関数を連続実行
         requestAnimationFrame(animate);
-        }
-
-        /**
-        * 球体を自転させる関数
-        */
-        function rotation() {
-        sphere.rotation.set(
-        0,
-        sphere.rotation.y + 0.005,
-        sphere.rotation.z + 0.005
-        )
         }
       </template>
     </page>
