--- a/web/src/coding/works/page31.ejs
+++ b/web/src/coding/works/page31.ejs
@@ -40,10 +40,18 @@
 
 
       <template slot="js">
+        // three.jsをnode moduleから読み込み
+        import * as THREE from 'three';
+        // orbitControls.jsをnode moduleから読み込み
+        import {
+        OrbitControls
+        } from "three/examples/jsm/controls/OrbitControls";
+
         /**
         * createdのタイミングでinit()関数実行
         */
         window.addEventListener('load', init);
+
 
         // ----------------------------------------------------------------------
 
@@ -55,7 +63,8 @@
         let cH = parent.clientHeight;
 
         // グローバルでの変数定義
-        var renderer, scene, camera, controls, directionalLight, geometry, material, sphere, loader, texture;
+        var renderer, scene, camera, controls, directionalLight,
+        geometry, material, sphere, loader, texture;
 
         // OrbitControls用domElement変数
         let domElement = document.getElementById("myCanvas");
@@ -113,7 +122,7 @@
         texture = loader.load('../../../assets/img/coding/page/kv/planet/earth.jpg');
 
         // オブジェクトの質感を定義
-        material = new THREE.MeshStandardMaterial({
+        material = new THREE.MeshPhongMaterial({
         map: texture
         });
 
