--- a/web/src/coding/works/page31.ejs
+++ b/web/src/coding/works/page31.ejs
@@ -26,7 +26,9 @@
 
 
       <template slot="html">
-        <!-- ソースとしてhtmlを記述 -->
+        &lt;div class="canvas-parent" id="parent"&gt;
+        &lt;canvas id="myCanvas"&gt;&lt;/canvas&gt;
+        &lt;/div&gt;
       </template>
 
 
@@ -92,7 +94,8 @@
 
         // rendererインスタンス定義(canvas要素にWebGL使用定義)
         renderer = new THREE.WebGLRenderer({
-        canvas: document.querySelector('#myCanvas')
+        canvas: document.querySelector('#myCanvas'),
+        antialias: true
         });
         renderer.setPixelRatio(window.devicePixelRatio);
         renderer.setSize(cW, cH);
