--- a/web/src/coding/works/page12.ejs
+++ b/web/src/coding/works/page12.ejs
@@ -14,30 +14,51 @@
   <main class="c-page">
 
 
-    <page name="work10" tab="3">
+    <page name="work11" tab="3">
 
 
       <template slot="mainCont">
-        <div class="canvas-parent" id="canvasParent">
-          <canvas id="canvas"></canvas>
+
+        <nav class="nav">
+          <ul class="nav-wrap">
+            <li class="nav-list underline"><a href="#aliceblue">aliceblue</a></li>
+            <li class="nav-list"><a href="#orange">orange</a></li>
+            <li class="nav-list"><a href="#turquoise">turquoise</a></li>
+            <li class="nav-list"><a href="#pink">pink</a></li>
+            <li class="nav-list"><a href="#yellowgreen">yellowgreen</a></li>
+            <li class="nav-list"><a href="#blue">blue</a></li>
+          </ul>
+        </nav>
+
+        <div class="wrapper">
+
+          <div class="wrap">
+
+            <section id="aliceblue" class="section aliceblue"></section>
+            <section id="orange" class="section orange"></section>
+            <section id="turquoise" class="section turquoise"></section>
+            <section id="pink" class="section pink"></section>
+            <section id="yellowgreen" class="section yellowgreen"></section>
+            <section id="blue" class="section blue"></section>
+
+
+          </div>
+
         </div>
+
+
       </template>
+
 
 
 
       <template slot="html">
-        &lt;div class="canvas-parent" id="canvasParent"&gt;
-        &lt;canvas id="canvas"&gt;&lt;/canvas&gt;
-        &lt;/div&gt;
+
       </template>
 
 
       <template slot="css">
-        .canvas-parent {
-        width: 100%;
-        height: 100%;
-        cursor: pointer;
-        }
+
       </template>
 
 
@@ -52,10 +73,87 @@
 
 <!-- css manipulation ----------------------------------------- -->
 <style type="text/css">
-  .canvas-parent {
+  .cont {
+    position: relative;
+  }
+
+  .nav {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+  }
+
+  .nav-wrap {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px 0;
+  }
+
+  .nav-list {
+    margin-bottom: 5px;
+    position: relative;
+    font-size: 18px;
+  }
+
+  .underline:after {
+    width: 120%;
+    height: 3px;
+    background-color: rgb(86, 125, 255);
+    position: absolute;
+    content: "";
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 0;
+  }
+
+  .wrapper {
     width: 100%;
     height: 100%;
-    cursor: pointer;
+    overflow-y: scroll;
+  }
+
+  .wrap {
+    width: 100%;
+    height: calc(100% * 7);
+    display: flex;
+    flex-direction: column;
+  }
+
+  .section {
+    width: 100%;
+    height: 100%;
+  }
+
+  .section:last-child {
+    width: 100%;
+    height: 200%;
+  }
+
+  .aliceblue {
+    background-color: aliceblue;
+  }
+
+  .orange {
+    background-color: orange;
+  }
+
+  .turquoise {
+    background-color: turquoise;
+  }
+
+  .pink {
+    background-color: pink;
+  }
+
+  .yellowgreen {
+    background-color: yellowgreen;
+  }
+
+  .blue {
+    background-color: blue;
   }
 
 </style>
