--- a/web/src/assets/scss/coding/c-page.scss
+++ b/web/src/assets/scss/coding/c-page.scss
@@ -11,6 +11,9 @@
 /*layout*/
 @import "../layout/*";
 
+/*swiper*/
+@import "../../../../node_modules/swiper/swiper.scss";
+
 
 // css for page layout----------------------------
 
