--- a/web/src/coding/works/page37.ejs
+++ b/web/src/coding/works/page37.ejs
@@ -14,22 +14,27 @@
   <main class="c-page">
 
 
-    <page name="work3" tab="3">
+    <page name="work37" tab="3">
 
 
       <template slot="mainCont">
-        <!-- kvに入るhtmlを記述 -->
+        <div class="canvas-parent" id="parent">
+        </div>
       </template>
 
 
 
       <template slot="html">
-        <!-- ソースとしてhtmlを記述 -->
+        &lt;div class="canvas-parent" id="parent"&gt;
+        &lt;/div&gt;
       </template>
 
 
       <template slot="css">
-        <!-- ソースとしてcssを記述 -->
+        .canvas-parent {
+        width: 100%;
+        height: 100%;
+        }
       </template>
 
 
@@ -44,7 +49,10 @@
 
 <!-- css manipulation ----------------------------------------- -->
 <style type="text/css">
-  /* kvのhtmlをスタイリングするcssを記述 */
+  .canvas-parent {
+    width: 100%;
+    height: 100%;
+  }
 
 </style>
 
